swagger スキーマ修正
