# api-stub-server/service/ChatService.js
@@ -7,7 +7,7 @@
  *
  * xUID String 
  * chatID String 
- * returns inline_response_200_5
+ * returns inline_response_200_6
  **/
 exports.chatsChatIDMessagesGET = function(xUID,chatID) {
   return new Promise(function(resolve, reject) {
@@ -18,7 +18,7 @@ exports.chatsChatIDMessagesGET = function(xUID,chatID) {
     "lastName" : "山田",
     "senderID" : "1234567890",
     "chatID" : "f47ac10b-58cc-4372-a567-0e02b2c3d479",
-    "iconImage" : "VkJPUncwS0dnb0FBQUFOU1VoRVVnQUFBQmdBQUFBWUNBWUFBQURnZHozNEFBQUJqRWxFUVZSSVMrMlZ2VW9EUVJTR3Y3VlE=",
+    "iconImageUrl" : "https://placehold.jp/150x150.png",
     "messageID" : "f47ac10b-58cc-4372-a567-0e02b2c3d479",
     "sentAt" : "2020-01-01T00:00:00Z",
     "content" : "Hello, World!"
@@ -80,7 +80,7 @@ exports.chatsChatIDMessagesPOST = function(body,chatID,xUID) {
  * チャット一覧を取得します(userプロパティは、医師の管理者画面で使用します)
  *
  * xUID String 
- * returns inline_response_200_4
+ * returns inline_response_200_5
  **/
 exports.chatsGET = function(xUID) {
   return new Promise(function(resolve, reject) {
@@ -90,8 +90,8 @@ exports.chatsGET = function(xUID) {
     "doctor" : {
       "firstName" : "太郎",
       "lastName" : "山田",
-      "doctorID" : "1234567890",
-      "doctorIcon" : "VkJPUncwS0dnb0FBQUFOU1VoRVVnQUFBQmdBQUFBWUNBWUFBQURnZHozNEFBQUJqRWxFUVZSSVMrMlZ2VW9EUVJTR3Y3VlE="
+      "doctorIconUrl" : "https://placehold.jp/150x150.png",
+      "doctorID" : "1234567890"
     },
     "latestMessageSentAt" : "2020-01-01T00:00:00Z",
     "chatID" : "f47ac10b-58cc-4372-a567-0e02b2c3d479",
@@ -99,10 +99,26 @@ exports.chatsGET = function(xUID) {
     "user" : {
       "firstName" : "太郎",
       "lastName" : "山田",
-      "userIcon" : "VkJPUncwS0dnb0FBQUFOU1VoRVVnQUFBQmdBQUFBWUNBWUFBQURnZHozNEFBQUJqRWxFUVZSSVMrMlZ2VW9EUVJTR3Y3VlE=",
+      "userIconUrl" : "https://placehold.jp/150x150.png",
       "userID" : "1234567890"
     }
-  }]
+  }, {
+    "doctor" : {
+      "firstName" : "太郎",
+      "lastName" : "山田",
+      "doctorIconUrl" : "https://placehold.jp/150x150.png",
+      "doctorID" : "1234567890"
+    },
+    "latestMessageSentAt" : "2020-01-01T00:00:00Z",
+    "chatID" : "f47ac10b-58cc-4372-a567-0e02b2c3d479",
+    "latestMessageText" : "Hello, World!",
+    "user" : {
+      "firstName" : "太郎",
+      "lastName" : "山田",
+      "userIconUrl" : "https://placehold.jp/150x150.png",
+      "userID" : "1234567890"
+    }
+  } ]
 };
     if (Object.keys(examples).length > 0) {
       resolve(examples[Object.keys(examples)[0]]);
